--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
     </section>
 
     <section class="main-content">
-      <h2>
-<a id="-welcome-to-github-pages" class="anchor" href="#-welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>### Welcome to GitHub Pages.</h2>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+      <p><img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcRbhoWRN_ltWymGOFmX7u13Pj2EVWdFT7UEGTiWO-59h2_hsIHFow" alt="">## ### Welcome to GitHub Pages.
+This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
